Fix z-indexes of main navbar and welcome banner

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -107,6 +107,10 @@ a.btn:focus {
   margin-bottom: 3 * $spacer;
 }
 
+#main-navbar {
+  z-index: 10; // put in front of welcome banner
+}
+
 #footer-navbar {
   flex-direction: row;
   flex-wrap: nowrap;
@@ -243,7 +247,6 @@ a.btn:focus {
   top: calc(-84px - #{$spacer} * 2); // navbar height plus navbar padding-top
   background-color: $brand-dark-blue;
   color: #fff;
-  z-index: -1; // put behind navbar
 
   .whiteclouds {
     position: absolute;
